# Traditional-Chinese-Medicine-Management-System

./: .gitignore  中医药管理系统数据库表设计、E-R 图与时序图.md  中医药管理系统相关项目网站.md  基于 Django 的中医药管理系统架构设计方案.md  基于 Django 的中医药管理系统项目任务需求表.md
project/: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  start_backend.ps1  start_backend_sqlite.ps1
project/accounts/: admin.py  api.py  api_permissions.py  apps.py  jwt_api.py  models.py  navigation.py  rbac.py  services.py  tests.py
project/accounts/migrations/: 0001_initial.py
project/config/: __init__.py  api_urls.py  asgi.py  exceptions.py  runtime.py  settings.py  wsgi.py
project/dashboard/: tests.py
project/dashboard/management/commands/: seed_demo.py
project/formulas/: admin.py  api.py  apps.py  models.py
project/formulas/migrations/: 0001_initial.py
project/frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
project/frontend/src/: style.css
project/frontend/src/api/: http.js
project/frontend/src/composables/: useI18n.js
project/frontend/src/locales/: en-US.js  index.js  zh-CN.js
project/frontend/src/router/: index.js
project/frontend/src/stores/: auth.js
project/frontend/src/views/: AppLayout.vue  DashboardView.vue  FormulasView.vue  HerbsView.vue  InventoryView.vue  LoginView.vue  UsersView.vue
project/herbs/: admin.py  api.py  apps.py  models.py
project/herbs/migrations/: 0001_initial.py
project/inventory/: admin.py  api.py  apps.py  models.py  services.py  tests.py
project/inventory/migrations/: 0001_initial.py
(+8 files in other folders)
